--- a/project_3/README
+++ b/project_3/README
@@ -1,1 +1,1 @@
-to see a demonstration of the project open the Video 3 demonstration file and follow the link.
+to see a demonstration of the project open the project 3 video file and follow the link.
